# CARLA_autonomous-vehicle

./: README.md
lane_detection/: CMakeLists.txt  package.xml
lane_detection/src/: lane_detection.cpp  pure_pursuit_controller.cpp
lane_detection/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
