<?xml version="1.0"?>
<package format="2">
  <name>lane_detection</name>
  <version>0.0.1</version>
  <description>ROS 2 lane detection and control using CARLA</description>
  <maintainer email="iremaslan0420@hotmail.com">Irem</maintainer>
  <license>Apache License 2.0</license>



  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>carla_msgs</build_depend>
 <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
